--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://todo_owner:tYsXNhxB5I7n@ep-rapid-rice-a1gubr6c.ap-southeast-1.aws.neon.tech/todo?sslmode=require"
+
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c3VwZXJiLXN0YWctNjMuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_1w3ALUOHxP4xYGZilfy8GiCwnzJZyrS5jb5QYVWctG
