--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "npx prisma generate"
-    
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.1.2",
+    "@clerk/themes": "^2.1.7",
     "@nextui-org/react": "^2.3.6",
     "@prisma/client": "^5.14.0",
     "framer-motion": "^11.2.6",
