--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/themes": "^2.1.7",
     "@nextui-org/react": "^2.3.6",
     "@prisma/client": "^5.14.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.2.6",
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
